--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: rgb(148, 94, 94);
+}
+.head{
+  display: flex;
+  justify-content: center;
+  margin-top: 14rem;
+}
+.head h1{
+    background-color: rgb(113, 113, 144);
+    padding: 1rem 1rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 4px yellowgreen;
 }
